--- a/index.qmd
+++ b/index.qmd
@@ -8,26 +8,34 @@ title: "Mediation Moderation and Conditional Process Analysis"
 
 This data analysis seminar focuses on linear regression analysis to explore questions about mediated and moderated effects.
 
-Computer applications will focus on R statistical language, the Rstudio environment ([https://www.rstudio.com),](https://www.rstudio.com),/) and the PROCESS software by Andrew F. Hayes ([http://processmacro.org).](http://processmacro.org)./)
+Computer applications will focus on R statistical language, the Rstudio environment ([https://www.rstudio.com),](https://www.rstudio.com/),/) and the PROCESS software by Andrew F. Hayes ([http://processmacro.org).](http://processmacro.org/)./)
 
 The course is subdivided into the following learning units:
 
-• The introductory part of the course will be dedicated to a brief review of the basic principles of linear regression and the setup of R and PROCESS for statistical analysis. We will discuss multiple regression analysis and its principles to understand how to fit, visualize, interpret, and evaluate multiple regression models in R. We will also get a first overview of mediation, moderation, and conditional process models.\
-• We'll next focus on mediation analysis, seeing how to fit, visualize, interpret, and evaluate mediation models using PROCESS in the R environment.\
-• The next learning unit will be dedicated to moderation analysis and explaining how to fit, visualize, interpret, and evaluate moderation models using PROCESS in the R environment.\
-• The final learning unit will be dedicated to an overview of conditional process analysis and explaining how to fit, visualize, interpret, and evaluate conditional process models using PROCESS in the R environment.
+-   The introductory part of the course is dedicated to a brief review of the basic principles of linear regression and the setup of R and PROCESS for statistical analysis. We discuss multiple regression analysis and its principles to understand how to fit, visualize, interpret, and evaluate multiple regression models in R. We also get a first overview of mediation, moderation, and conditional process models.
 
-The last part of the course will be dedicated to the project work.
+-   We then focus on mediation analysis, seeing how to fit, visualize, interpret, and evaluate mediation models using PROCESS in the R environment.
 
-By the end of this course, participants will be able to:\
-• Run and interpret the results of linear regression, moderation, mediation, and conditional process models.\
-• Know how to test competing theories of mechanisms statistically through the comparison of indirect effects in models with multiple mediators.\
-• Know how to visualize and probe interactions in regression models to interpret interaction effects appropriately.\
-• Know how to estimate the contingencies of mechanisms through the computation and inference about conditional indirect effects.\
-• Know how to R language and PROCESS to run, visualize, and understand linear regression, moderation, mediation, and conditional process models.
+-   The following learning unit is dedicated to moderation analysis and explaining how to fit, visualize, interpret, and evaluate moderation models using PROCESS in the R environment.
+
+-   The final learning unit is an overview of conditional process analysis and aims at explaining how to fit, visualize, interpret, and evaluate conditional process models using PROCESS in the R environment.
+
+The last part of the course is dedicated to the project work.
+
+By the end of this course, participants are expected to know how:
+
+-   Run and interpret the results of linear regression, moderation, mediation, and conditional process models.
+
+-   Test competing theories of mechanisms statistically through the comparison of indirect effects in models with multiple mediators.
+
+-   Visualize and probe interactions in regression models to interpret interaction effects appropriately.
+
+-   Estimate the contingencies of mechanisms through the computation and inference about conditional indirect effects.
+
+-   Use the R language and PROCESS to run, visualize, and understand linear regression, moderation, mediation, and conditional process models.
 
 ### Reading list
 
 The official handbook of the course is:
 
-Andrew F. Hayes. Introduction to Mediation, Moderation, and Conditional Process Analysis. A Regression-Based Approach. 2018. SECOND EDITION. THE GUILFORD PRESS, New York, London.
+Andrew F. Hayes. [Introduction to Mediation, Moderation, and Conditional Process Analysis. A Regression-Based Approach](https://books.google.at/books?id=6uk7DwAAQBAJ&printsec=frontcover&dq=introduction+to+Mediation,+Moderation,+and+Conditional+Process+Analysis.+A+Regression-Based+Approach.+2018+second+edition&hl=en&sa=X&ved=2ahUKEwjaoLSi6cf9AhV0S_EDHbngDwwQ6AF6BAgHEAI#v=onepage&q=introduction%20to%20Mediation%2C%20Moderation%2C%20and%20Conditional%20Process%20Analysis.%20A%20Regression-Based%20Approach.%202018%20second%20edition&f=false). 2018. SECOND EDITION. THE GUILFORD PRESS, New York, London.
