--- a/introduction.qmd
+++ b/introduction.qmd
@@ -7,15 +7,13 @@ This is a data analysis seminar focused on the application of linear regression 
 
 Computer applications will focus on R statistical language and the Rstudio environment (https://www.rstudio.com) and the PROCESS software by Andrew F. Hayes (http://processmacro.org).
 
-The course is subdivided in 5 learning units.
+The introductory part of the course will be dedicated to installing the **data science tools R and Rstudio** (https://www.rstudio.com) and to learning the basic principles necessary to work on statistical analysis with this software. Students will be required to acquire a basic familiarity with the Rstudio interface and R programming in a short period of time, in order to be able to use it for performing statistical analysis. At home study and exercise will be fundamental to reaching the objective.
 
-The introductory part of the course will be dedicated to installing the data science tools R and Rstudio (https://www.rstudio.com) and to learning the basic principles necessary to work on statistical analysis with this software. Students will be required to acquire a basic familiarity with the Rstudio interface and R programming in a short period of time, in order to be able to use it for performing statistical analysis. At home study and exercise will be fundamental to reaching the objective.
-
-The second part of the course will be dedicated to presenting the principles of linear regression analysis, and explaining how to fit, visualize, interpret, and evaluate regression models in R.
+The second part of the course will be dedicated to a short recap of the principles of **linear regression** analysis and explaining how to fit, visualize, interpret, and evaluate regression models in R.
 
 We'll use linear regression models to answer questions of the WHETHER or IF variety. These are questions about association between variables. For example, is there a relationship between a variable Y, and another variable X, and possibly other ones? For example, we can use this kind of analysis to study whether polarization increases as the exposure to partisan news media increases.
 
-```{r}
+```{r message=FALSE, warning=FALSE}
 require(tidyverse)
 
 y <- rnorm(100)
@@ -29,9 +27,9 @@ ggplot(data=df, aes(x,y)) +
   theme_classic()
 ```
 
-The third unit will be dedicated to \*\*mediation analysis\*\*, and explaining how to fit, visualize, interpret, and evaluate mediation models using PROCESS in the R environment.
+The third unit will be dedicated to **mediation analysis**, and explaining how to fit, visualize, interpret, and evaluate mediation models using PROCESS in the R environment.
 
-Mediation analysis answers questions of the \*\*HOW\*\* variety, and it is used to study the mechanism(s) by which one variable impacts another one.
+Mediation analysis answers questions of the **HOW** variety, and it is used to study the mechanism(s) by which one variable impacts another one.
 
 ```{r echo=FALSE}
 require(DiagrammeR)
@@ -52,11 +50,11 @@ height = 500
 
 For example, let's say that we have established a relationship between the use of violent video games and the frequency of off-line assaults. The next step may be to use mediation analysis to analyze the potential mechanism by which violent video games impact offline aggressive behavior.
 
-\*\*UNIT 4\*\*: The fourth learning unit will be dedicated to \*\*moderation analysis\*\*, and explaining how to fit, visualize, interpret, and evaluate moderation models using PROCESS in the R environment.
+Next, will focus on **moderation analysis** and explaining how to fit, visualize, interpret, and evaluate moderation models using PROCESS in the R environment.
 
-Moderation analysis is used to answer questions of the \*\*WHEN\*\* variety, that is to say, to study the conditions or contingencies of an association.
+Moderation analysis is used to answer questions of the **WHEN** variety, that is to say, to study the conditions or contingencies of an association.
 
-```{r}
+```{r echo=FALSE}
 grViz("digraph {
 width = 500
 height = 500
@@ -78,7 +76,7 @@ height = 500
 
 For example, there is no reason to think that the association between violent video games and offline aggression is universal. Maybe, it is stronger for males than females, or the strength of the association is a function of personality traits. We use moderation analysis to answer these questions.
 
-```{r}
+```{r echo=FALSE}
 grViz("digraph {
 width = 500
 height = 500
@@ -98,11 +96,11 @@ height = 500
   }")
 ```
 
-\*\*UNIT 5\*\*: The fifth learning unit will be dedicated to \*\*conditional process analysis\*\*, and explaining how to fit, visualize, interpret, and evaluate conditional process models using PROCESS in the R environment.
+We finally focus on **conditional process analysis** and explain how to fit, visualize, interpret, and evaluate conditional process models using PROCESS in the R environment.
 
 Conditional process represents the conditions of mechanisms by which a variable impact on another one. It includes both mediation and moderation analysis.
 
-```{r}
+```{r echo=FALSE}
 grViz("digraph {
 width = 500
 height = 500
@@ -128,7 +126,7 @@ height = 500
 
 Conditional process models allow to address the complexity of social science phenomena.
 
-```{r}
+```{r echo=FALSE}
 grViz("digraph {
 width = 500
 height = 500
@@ -154,9 +152,9 @@ height = 500
 
 ## Learning Outcomes
 
--   By the end of this course, participants will be able to:
+By the end of this course, participants will be able to:
 
-    Run and interpret the results of linear regression, moderation, mediation, and conditional process models.
+-   Run and interpret the results of linear regression, moderation, mediation, and conditional process models.
 
 -   Know how to test competing theories of mechanisms statistically through the comparison of indirect effects in models with multiple mediators.
 
@@ -166,16 +164,8 @@ height = 500
 
 -   Know how to R language and PROCESS to run, visualize, and understand linear regression, moderation, mediation, and conditional process models.
 
-## Assessment
-
-The assessment includes two online quizzes to assess the understanding of key concepts. The results of each questionnaire will constitute 50% of the final grade.
-
-The evaluation also includes a final data analysis project to be conducted in small groups during the course. This constitutes a total of 50% of the final grade.
-
-Attendance is mandatory and participation positively evaluated.
-
 ## Handbook
 
-The official handbook of the course is:
+The handbook of the course is:
 
 Andrew F. Hayes. *Introduction to Mediation, Moderation, and Conditional Process Analysis. A Regression-Based Approach.* 2018. SECOND EDITION. THE GUILFORD PRESS, New York, London
